--- a/.config/fcitx5/config
+++ b/.config/fcitx5/config
@@ -7,21 +7,22 @@ EnumerateForwardKeys=
 EnumerateBackwardKeys=
 # Skip first input method while enumerating
 EnumerateSkipFirst=False
+# Activate Input Method
+ActivateKeys=
+# Time limit in milliseconds for triggering modifier key shortcuts
+ModifierOnlyKeyTimeout=250
 
 [Hotkey/TriggerKeys]
-0=Super+space
+0=Control+space
 
 [Hotkey/AltTriggerKeys]
-0=Shift_L
+0=Shift+Shift_L
 
 [Hotkey/EnumerateGroupForwardKeys]
-0=Super+space
+0=Control+space
 
 [Hotkey/EnumerateGroupBackwardKeys]
-0=Shift+Super+space
-
-[Hotkey/ActivateKeys]
-0=Hangul_Hanja
+0=Control+Shift+space
 
 [Hotkey/DeactivateKeys]
 0=Hangul_Romaja
