--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,6 +1,7 @@
 # vim:ft=hyprlang
 
 source = ./colors.conf
+$wallpaper = ~/Documents/Projects/wallpaper_quantiser/wallpaper_base16.png
 general {
     hide_cursor = true
 }
@@ -38,31 +39,32 @@ input-field {
 
 label {
     monitor =
-    text = Hi there, $USER
+    text = <span weight="ultralight">$TIME</span>
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
     color = rgb($foreground)
-    font_size = 96
-    font_family = JetBrainsMono NFP
+    font_size = 250
+    font_family = Noto Sans
     rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 160
+    position = 0, 260
     halign = center
     valign = center
+    shadow_passes = 3 
+    shadow_color = rgb($background)
 }
 
 background {
     monitor =
-    #path = $wallpaper
+    path = $wallpaper
     color = rgb($background)
 
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    # blur_passes = 0 # 0 disables blurring
-    # blur_size = 7
-    # noise = 0.0117
-    # contrast = 0.8916
-    # brightness = 0.8172
-    # vibrancy = 0.1696
-    # vibrancy_darkness = 0.0
+    blur_passes = 2 # 0 disables blurring
+    blur_size = 7
+    noise = 0.0117
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
 }
 
 
