--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -95,11 +95,11 @@
             "smooth-scrolling-threshold": 10,
             "on-scroll-up": "playerctl next",
             "on-scroll-down": "playerctl previous",
-            "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.sh",
+            "exec" : "~/.config/waybar/custom_modules/mediaplayer.sh",
             "tooltip": true 
         },
         "custom/weather": {
-            "exec": "$HOME/.config/waybar/custom_modules/get_weather.sh Singapore",
+            "exec": "~/.config/waybar/custom_modules/get_weather.sh Singapore",
             "return-type": "json",
             "format": "{}", 
             "tooltip": true,
@@ -122,7 +122,7 @@
         "custom/kb": {
             "tooltip": false,
             "format": "󰌌", 
-            "on-click": "$HOME/.config/waybar/custom_modules/open_kb.sh", 
+            "on-click": "~/.config/waybar/custom_modules/open_kb.sh", 
             "escape": true
         }
     },
@@ -155,7 +155,7 @@
         "custom/launch_app": {
             "tooltip": false,
             "format": "󰀻", 
-            "on-click": "$HOME/.config/scripts/icon_launcher.sh", 
+            "on-click": "~/.config/scripts/icon_launcher.sh", 
             "escape": true
         },
         "custom/workspaces": {
@@ -209,7 +209,7 @@
             },
             "return-type": "json",
             "interval": 2, 
-            "exec": "$HOME/.config/scripts/notification_check.sh", 
+            "exec": "~/.config/scripts/notification_check.sh", 
             "on-click": "dunstctl set-paused toggle", 
             "escape": true,
             "max-length": 2 
@@ -217,7 +217,7 @@
         "custom/powermenu": {
             "tooltip": false,
             "format": "", 
-            "on-click": "$HOME/.config/scripts/powermenu_launcher.sh", 
+            "on-click": "~/.config/scripts/powermenu_launcher.sh", 
             "escape": true
         }
     }
