Add workspace indicator script for bar

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # vim:ft=hyprlang
 
 source = ./colors.conf
-$wallpaper = ~/Documents/Projects/wallpaper_quantiser/wallpaper_base16.png
+$wallpaper = ~/Pictures/wallpaper.jpg
 general {
     hide_cursor = true
 }
